opam-version: "1.2"
version: "1.0.1~"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/llopt"
dev-repo: "git://github.com/kit-ty-kate/llopt.git"
bug-reports: "https://github.com/kit-ty-kate/llopt/issues"
tags: ["llvm" "optimization" "test" "testing" "compiler"]
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: [
  "jbuilder" {build}
  "llvm" {>= "3.5"}
  "cmdliner"
]
